Fix extra spacing in aim blocks (#2520)
* Fix extra spacing in aim blocks

* additional aim fixes for events and faq block

* Refactor aim block header class names to block-header for consistency

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1082,6 +1082,16 @@ body[class^="browse-"] .browse-filters-full-container .browse-filters-one-pg-res
   backdrop-filter: blur(12px);
 }
 
+.block-header {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spectrum-spacing-100);
+  text-align: center;
+  max-width: 846px;
+  margin: 0 auto;
+  align-items: center;
+}
+
 
 @media (min-width: 600px) {
   body[class^="browse-"] .browse-filters-full-container .browse-filters-pagination,
